# chat-bot

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
entity/: group_message.py  group_message_attachment.py
llm/: llm_service.py
napcat/: napcat_event.py
prompt/: TimingPrompt.py
repository/: group_message_attachment_repository.py  group_message_repository.py
router/: MessageRouter.py
service/: napcat_service.py  repeat_service.py
utils/: database.py  napcat_message_util.py
